# cap-docs

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  MAINTENANCE.md  NEXT-STEPS.md  README.md  REFERENCES.md  RELEASE-CHECKLIST.md  ROADMAP.md  SECURITY.md  STATUS.md
.github/: CODEOWNERS  pull_request_template.md
capps/: CAPP-0001-cap-digest-core-split.md  CAPP-0002-initial-schema-and-fixtures.md  CAPP-0003-table-basic-digest-pack.md  CAPP-0004-cap-core-draft-entry.md  CAPP-0005-cap-core-candidate-normative-track.md  CAPP-0006-cap-core-candidate-normative-review-entry.md  README.md
fixtures/: README.md
notes/: 2026-07-05-cognitive-error-and-framework.md  2026-07-05-deep-research-v2-knowledge-notes.md
packs/: README.md
reference/python/: README.md  pyproject.toml
reference/python/cap_core/: __init__.py  validator.py
reference/python/cap_digest/: __init__.py  assembler.py  followup.py  text.py
reference/python/scripts/: compare_core_interop_reports.py  package_core_release_artifacts.py  package_release_artifacts.py  render_core_inspection_report.py  run_core_interop_harness.py  validate_core_fixtures.py  validate_core_release_manifest.py  validate_digest_release_manifest.py  validate_fixtures.py  validate_schema_fixtures.py
reference/python/tests/: test_basic_table.py  test_core_local_analysis.py  test_digest_text.py  test_followup_and_pack.py  test_security_adversarial.py
schemas/: README.md  cap.conformance_report.v1.schema.json  cap.digest_patch.v1.schema.json  cap.gate_result.v1.schema.json  (+2 more)
(+222 files in other folders)
