[project]
name = "cap-digest-reference"
version = "0.0.1"
description = "Experimental CAP-Digest reference implementation for conformance fixtures"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.18",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
